--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^4.1.3",
-    "nodemon": "^2.0.14",
-    "uuid": "^8.3.2"
+    "mongodb": "^4.1.4",
+    "nodemon": "^2.0.14"
   }
 }
