--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Group 5",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
