--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-client-session": "^0.0.7",
     "react-dom": "^17.0.2",
