--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^2.1.2"
+    "react-scripts": "^4.0.3",
+    "web-vitals": "^2.1.2",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "set PORT=5000 && react-scripts start",
