--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-youtube": "^7.13.1",
     "web-vitals": "^2.1.2",
     "yarn": "^1.22.17"
   },
