--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node ./server/tasks/seed.js",
     "precommit": "lint-staged",
     "prepare": "husky install"
   },
