adding filter/sort menus

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.js": [
+    "*.js,*.json": [
       "prettier --write"
     ]
   },
