--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "singleQuote": true,
   "useTabs": false,
   "bracketSameLine": false,
-  "arrowParens": "always"  
+  "arrowParens": "always"  ,
+  "printWidth": 80
 }
