--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
     "axios": "^0.24.0",
     "jsonwebtoken": "^8.5.1",
     "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
+    "react-router-use-location-state": "^3.0.0",
     "react-scripts": "^4.0.3",
     "react-youtube": "^7.13.1",
     "web-vitals": "^2.1.2",
