--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "add": "^2.0.6",
     "axios": "^0.24.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
